Exercices conditions, boucles et tableaux

--- a/res04-J1/exercice-condition/index.html
+++ b/res04-J1/exercice-condition/index.html
@@ -2,7 +2,7 @@
 <html lang="fr">
     <head>
         <meta charset="UTF-8">
-        <title>Nombre mystère</title>
+        <title>Exercice conditions</title>
     </head>
     <body>
         <script type="text/javascript" src="index.js"></script>
