Suite des exercices et mini projet

--- a/res04-J2/mini-projet/index.html
+++ b/res04-J2/mini-projet/index.html
@@ -2,7 +2,7 @@
 <html lang="fr">
     <head>
         <meta charset="UTF-8">
-        <title>Exercice fonctions</title>
+        <title>Mini projet</title>
     </head>
     <body>
         <script type="text/javascript" src="index.js"></script>
