--- a/res04-J2/exercice-bonus/index.html
+++ b/res04-J2/exercice-bonus/index.html
@@ -2,7 +2,7 @@
 <html lang="fr">
     <head>
         <meta charset="UTF-8">
-        <title>Mini projet</title>
+        <title>Exercice Bonus</title>
     </head>
     <body>
         <script type="text/javascript" src="index.js"></script>
