--- a/res04-J3/exercice-DOM/exercices.html
+++ b/res04-J3/exercice-DOM/exercices.html
@@ -60,6 +60,10 @@
       </section>
       <section id="ex6">
           <h2>Exercice 6</h2>
+          <section id="ball">  
+  
+          </section>    
+          <button id="btn-roll">Rouler</button>  
       </section>
       <script type="application/javascript" src="index.js"></script>
       <!--<script type="application/javascript" src="correction.js"></script>-->
