--- a/res04-J3/interface-admin/index.html
+++ b/res04-J3/interface-admin/index.html
@@ -11,29 +11,33 @@
     </head>
     <body>
         <header>
-            <img src="logo.svg" alt="Des points formant un soleil">
+            <section>
+                <span id="click-aside" class="bi-chevron-bar-left"></span>
+                <img src="logo.svg" alt="Des points formant un soleil">
+            </section>
+            <section></section>
         </header>
         <main>
             <aside>
                 <nav>
-                    <h2>Utilisateurs <span class="bi-caret-down"></span></h2>
-                    <ul class="open users">
+                    <h2 data-nav="users">Utilisateurs <span class="bi-caret-down"></span></h2>
+                    <ul class="open" data-nav="users">
                         <li><a href="#">Liste des utilisateurs</a></li>
                         <li><a href="#">Ajouter un utilisateur</a></li>
                         <li><a href="#">Statistiques utilisateurs</a></li>
                     </ul>
                 </nav>
                 <nav>
-                    <h2>Produits <span class="bi-caret-down"></span></h2>
-                    <ul class="open products">
+                    <h2 data-nav="products">Produits <span class="bi-caret-down"></span></h2>
+                    <ul class="open" data-nav="products">
                         <li><a href="#">Liste des produits</a></li>
                         <li><a href="#">Ajouter un produit</a></li>
                         <li><a href="#">Statistiques des produits</a></li>
                     </ul>
                 </nav>
                 <nav>
-                    <h2>Catégories <span class="bi-caret-down"></span></h2>
-                    <ul class="open categories">
+                    <h2 data-nav="categories">Catégories <span class="bi-caret-down"></span></h2>
+                    <ul class="open" data-nav="categories">
                         <li><a href="#">Liste des catégories de produits</a></li>
                         <li><a href="#">Ajouter une catégorie de produits</a></li>
                     </ul>
