--- a/res04-J4/projet-paint/index.html
+++ b/res04-J4/projet-paint/index.html
@@ -12,8 +12,12 @@
     <body>
         <header>
             <menu>
-                <h2>Couleur</h2>
-                <button id="change-color"></button>
+                <label for="change-color">Couleur</label>
+                <input type="color" name="change-color" id="change-color">
+                <label for="change-row">Lignes</label>
+                <input type="number" name="change-row" id="change-row">
+                <label for="change-col">Colonnes</label>
+                <input type="number" name="change-col" id="change-col">
             </menu>
         </header>
         <main id="scene">
