exercices sur setTimeout et setInterval

--- a/res04-J3/interface-admin/index.html
+++ b/res04-J3/interface-admin/index.html
@@ -86,7 +86,7 @@
                     </table>
                 </section>
             </section>
-            <section class="close" id="modal-delete">
+            <section class="closed-modal" id="modal-delete">
                 <section id="modal-confirm">
                     <p>Etes-vous sûr-e de vouloir supprimer cet utilisateur ?</p>
                     <div id="btn">
