soutien, exercices d'algorithmie

--- a/res04-J3/interface-admin/index.html
+++ b/res04-J3/interface-admin/index.html
@@ -21,7 +21,7 @@
             <aside>
                 <nav>
                     <h2 data-nav="users">Utilisateurs <span class="bi-caret-down"></span></h2>
-                    <ul class="open" data-nav="users">
+                    <ul class="close" data-nav="users">
                         <li><a href="#">Liste des utilisateurs</a></li>
                         <li><a href="#">Ajouter un utilisateur</a></li>
                         <li><a href="#">Statistiques utilisateurs</a></li>
@@ -29,7 +29,7 @@
                 </nav>
                 <nav>
                     <h2 data-nav="products">Produits <span class="bi-caret-down"></span></h2>
-                    <ul class="open" data-nav="products">
+                    <ul class="close" data-nav="products">
                         <li><a href="#">Liste des produits</a></li>
                         <li><a href="#">Ajouter un produit</a></li>
                         <li><a href="#">Statistiques des produits</a></li>
@@ -37,7 +37,7 @@
                 </nav>
                 <nav>
                     <h2 data-nav="categories">Catégories <span class="bi-caret-down"></span></h2>
-                    <ul class="open" data-nav="categories">
+                    <ul class="close" data-nav="categories">
                         <li><a href="#">Liste des catégories de produits</a></li>
                         <li><a href="#">Ajouter une catégorie de produits</a></li>
                     </ul>
@@ -86,7 +86,7 @@
                     </table>
                 </section>
             </section>
-            <section class="closed-modal" id="modal-delete">
+            <section class="close" id="modal-delete">
                 <section id="modal-confirm">
                     <p>Etes-vous sûr-e de vouloir supprimer cet utilisateur ?</p>
                     <div id="btn">
