--- a/res04-J6/exercice-class/index.html
+++ b/res04-J6/exercice-class/index.html
@@ -7,24 +7,9 @@
     <body>
         <form action="">
             <h2>To Do List</h2>
+            <label for="task">Ajouter une tâche</label>
+            <input type="text" name="task" id="task" value="">
             <button id="add-task">Ajouter une tâche</button>
-            <ul>
-                <li>
-                    <label for=""><input type="text"></label>
-                </li>
-                <li>
-                    <label for=""><input type="text"></label>
-                </li>
-                <li>
-                    <label for=""><input type="text"></label>
-                </li>
-                <li>
-                    <label for=""><input type="text"></label>
-                </li>
-                <li>
-                    <label for=""><input type="text"></label>
-                </li>
-            </ul>
         </form>
         <script type="module" src="index.js"></script>
     </body>
