suite projet pizzeria

--- a/res04-J8/mini-projet-pizzeria/index.html
+++ b/res04-J8/mini-projet-pizzeria/index.html
@@ -139,26 +139,26 @@
             <aside>
                 <h2>Votre Pizza</h2>
                 <ul>
-                    <li>
-                        <article>
-                            <header>
-                                <figure>
-                                    <img src="assets/img/tomato.png" alt="Tomate" />
-                                </figure>
-                                <h3>Tomate</h3>
-                            </header>
-                        </article>
-                    </li>
-                    <li>
-                        <article>
-                            <header>
-                                <figure>
-                                    <img src="assets/img/cheese.png" alt="Fromage" />
-                                </figure>
-                                <h3>Fromage</h3>
-                            </header>
-                        </article>
-                    </li>
+                    <!--<li>-->
+                    <!--    <article>-->
+                    <!--        <header>-->
+                    <!--            <figure>-->
+                    <!--                <img src="assets/img/tomato.png" alt="Tomate" />-->
+                    <!--            </figure>-->
+                    <!--            <h3>Tomate</h3>-->
+                    <!--        </header>-->
+                    <!--    </article>-->
+                    <!--</li>-->
+                    <!--<li>-->
+                    <!--    <article>-->
+                    <!--        <header>-->
+                    <!--            <figure>-->
+                    <!--                <img src="assets/img/cheese.png" alt="Fromage" />-->
+                    <!--            </figure>-->
+                    <!--            <h3>Fromage</h3>-->
+                    <!--        </header>-->
+                    <!--    </article>-->
+                    <!--</li>-->
                     <li>
                         <button id="order">
                             Commander
